# exit_safely

./: Cargo.toml  README.md  build.rs
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/workflows/: dependabot.yml  deploy-rust.yml  rust-stability.yml  rust.yml
src/: lib.rs
tests/: test_app.rs  test_apps.rs  test_errors.rs  test_good_app.rs
tests/fixture_app/: Cargo.toml
tests/fixture_app/src/: main.rs
tests/fixtures/app/: Cargo.toml
tests/fixtures/app/examples/: fail_InvalidOk.rs  fail_InvalidOk.stderr  fail_NoRepr.rs  fail_NoRepr.stderr  fail_NotAnEnum.rs  fail_NotAnEnum.stderr  fail_NotTermination.rs  fail_ReprU16.rs  fail_ReprU16.stderr
tests/fixtures/app/src/: main.rs
tests/fixtures/good_app/: Cargo.toml
tests/fixtures/good_app/src/: main.rs
tests/fixtures/warnings/: Cargo.toml
tests/fixtures/warnings/src/: main.rs
