[package]
name = "exit_safely"
version = "0.2.0"
edition = "2024"
readme = "README.md"
description = "Enables exiting safely with custom exit codes while still calling `Drop` as needed. Aims for minimal magic and maximum flexibilty."
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
keywords = ["derive", "ExitCode", "Drop", "Termination", "CLI"]
homepage = "https://github.com/MusicalNinjaDad/exit_safely"
repository = "https://github.com/MusicalNinjaDad/exit_safely"
categories = ["development-tools", "rust-patterns"]
license = "MIT"
exclude = [".github", ".devcontainer"]
rust-version = "1.85.1"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["extra-traits"] }
proc-macro2 = "1.0.106"
proc_macro2_diagnostic = "0.1.0"
quote = "1.0.45"

[dev-dependencies]
escargot = "0.5.15"
try_v2 = "0.3.4"
trybuild = "1.0.116"

[build-dependencies]
autocfg = {workspace = true }

[workspace]
members = ["tests/fixtures/*"]

[workspace.dependencies]
exit_safely = { path = "."}
autocfg = "1.5.0"
